--- a/package.json
+++ b/package.json
@@ -4,14 +4,7 @@
   "version": "1.0.1",
   "author": "Dennis Vash <dennisvash@gmail.com>",
   "license": "MIT",
-  "keywords": [
-    "gatsby",
-    "template",
-    "tailwind",
-    "storybook",
-    "styled-components",
-    "css-in-js"
-  ],
+  "keywords": ["gatsby", "template", "tailwind", "storybook", "styled-components", "css-in-js"],
   "repository": {
     "type": "git",
     "url": "https://github.com/denvash/gatsby-styled-tailwind-storybook-starter"
@@ -48,6 +41,7 @@
     "styled-components": "^5.0.0-rc.1"
   },
   "devDependencies": {
+    "@stackbit/unibit": "*",
     "@babel/core": "^7.7.2",
     "@storybook/addon-actions": "^5.2.5",
     "@storybook/addon-links": "^5.2.5",
